syntax = "proto3";

package trenical.ticket;

option java_multiple_files = true;
option java_package = "it.unical.trenical.grpc.ticket";
option java_outer_classname = "TicketServiceProto";

import "common.proto";
import "google/protobuf/timestamp.proto";

// Servizio per la gestione dei biglietti
service TicketService {
  // Acquisto biglietti
  rpc PurchaseTicket(PurchaseTicketRequest) returns (PurchaseTicketResponse);

  // Modifica biglietto
  rpc ModifyTicket(ModifyTicketRequest) returns (OperationResponse);

  // Annulla biglietto
  rpc CancelTicket(CancelTicketRequest) returns (OperationResponse);

  // Ottieni biglietto per ID
  rpc GetTicket(GetTicketRequest) returns (GetTicketResponse);

  // Lista biglietti per utente
  rpc ListTickets(ListTicketsRequest) returns (ListTicketsResponse);

  // Elimina tutti i biglietti (solo admin)
  rpc ClearAllTickets(ClearAllTicketsRequest) returns (OperationResponse);
}

// Utilizziamo il messaggio Ticket definito in common.proto

// Richiesta per l'acquisto di un biglietto
message PurchaseTicketRequest {
  int32 train_id = 1; // Cambiato da string a int32
  string passenger_name = 2;
  string departure_station = 3;
  string arrival_station = 4;
  google.protobuf.Timestamp travel_date = 5;
  string service_class = 6; // Es: "Prima Classe", "Economy"
  string promo_code = 7; // Codice promozionale opzionale
  string payment_method = 8; // Es: "Carta di Credito", "PayPal"
  int32 seats = 9;
  google.protobuf.Timestamp travel_time = 10; // Orario di viaggio
}

// Risposta per l'acquisto di un biglietto
message PurchaseTicketResponse {
  bool success = 1;
  string ticket_id = 2; // ID univoco del biglietto acquistato (primo biglietto)
  string message = 3; // Messaggio di conferma o errore
  double price = 4; // Prezzo calcolato del biglietto
  trenical.common.Ticket ticket = 5; // Dettagli del primo biglietto acquistato
  repeated trenical.common.Ticket tickets = 6; // Tutti i biglietti acquistati
}

// Richiesta per la modifica di un biglietto
message ModifyTicketRequest {
  string ticket_id = 1; // ID del biglietto da modificare
  google.protobuf.Timestamp new_date = 2; // Nuova data di viaggio (opzionale)
  google.protobuf.Timestamp new_time = 3; // Nuovo orario (opzionale)
  string new_service_class = 4; // Nuova classe di servizio (opzionale)
  string new_departure_station = 5; // Nuova stazione di partenza (opzionale)
  string new_arrival_station = 6; // Nuova stazione di arrivo (opzionale)
  google.protobuf.Timestamp new_travel_time = 7; // Nuovo orario di viaggio (opzionale)
}

// Richiesta per annullare un biglietto
message CancelTicketRequest {
  string ticket_id = 1;
}

// Richiesta per ottenere un biglietto tramite ID
message GetTicketRequest {
  string ticket_id = 1;
}

// Risposta per ottenere un biglietto
message GetTicketResponse {
  bool success = 1;
  string message = 2;
  trenical.common.Ticket ticket = 3;
}

// Richiesta per ottenere la lista dei biglietti di un utente
message ListTicketsRequest {
  string passenger_name = 1;
}

// Risposta con la lista dei biglietti
message ListTicketsResponse {
  repeated trenical.common.Ticket tickets = 1;
}

// Risposta generica per le operazioni
message OperationResponse {
  bool success = 1; // Indica se l'operazione Ã¨ andata a buon fine
  string message = 2; // Messaggio di conferma o errore
}

// Richiesta per eliminare tutti i biglietti
message ClearAllTicketsRequest {}
